<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="142dp"
        app:layout_constraintBottom_toTopOf="@+id/username_editText"
        app:layout_constraintEnd_toEndOf="@+id/username_editText"
        app:layout_constraintStart_toStartOf="@+id/username_editText"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_facebook" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/username_text"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_editText"
        app:layout_constraintEnd_toEndOf="@+id/password_editText"
        app:layout_constraintStart_toStartOf="@+id/password_editText" />

    <TextView
        android:id="@+id/facebook_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/facebook_login_text"
        android:textColor="#165DEE"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_editText" />
</androidx.constraintlayout.widget.ConstraintLayout>